# CW_8_atomic_habits_docker

./: .env-sample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
data/: habits_data.json  users_data.json
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habits_created_at_habits_updated_at.py  0004_alter_habits_prize.py  0005_alter_habits_prize.py  0006_alter_habits_prize.py  0007_rename_is_good_habits_is_nice.py  0008_habits_friday_habits_monday_habits_saturday_and_more.py  0009_alter_habits_friday_alter_habits_monday_and_more.py  0010_alter_habits_friday_alter_habits_monday_and_more.py  0011_alter_habits_owner.py  0012_habits_utc_time.py  0013_habits_weekday_offset.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id_user_tg_nick.py  0003_alter_user_tg_chat_id.py  0004_alter_user_tg_chat_id.py  0005_user_time_offset.py
